[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Sprites/Ant_Spritesheet_32x16.png" type="Texture" id=1]
[ext_resource path="res://Objects/Ant.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 32, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 32, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 64, 16, 32, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 96, 16, 32, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 16 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Walk",
"speed": 12.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "Slide",
"speed": 24.0
} ]

[node name="Ant" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 14 )
animation = "Walk"

[node name="FloorCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 46 )

[node name="JumpBeforeLandTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpAfterFallenTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WallCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 72, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 35, -24, 13, -7, -4, -4, -31, 4, -56, 32, -28, 32, 7, 24, 51, 12, 52, -8.99999 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
